After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751937 - JNI: jaw_table_set_row_header is missing
JNI: jaw_table_set_row_header is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other All
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-03 23:32 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-04 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: Create setRowHeader in AtkTable (932 bytes, patch)
2015-07-04 12:59 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI: Create jaw_table_set_row_header (2.18 KB, patch)
2015-07-04 13:00 UTC, Magdalen Berns (irc magpie)
committed Details | Review
HACKING: remove set_row_header (796 bytes, patch)
2015-07-04 13:02 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-03 23:32:29 UTC
There is no implementation of jaw_table_set_row_header.[1]

[1] https://git.gnome.org/browse/atk/tree/atk/atktable.h#n86
Comment 1 Magdalen Berns (irc magpie) 2015-07-04 12:59:34 UTC
Created attachment 306801 [details] [review]
Wrapper: Create setRowHeader in AtkTable
Comment 2 Magdalen Berns (irc magpie) 2015-07-04 13:00:28 UTC
Created attachment 306802 [details] [review]
JNI: Create jaw_table_set_row_header
Comment 3 Magdalen Berns (irc magpie) 2015-07-04 13:02:32 UTC
Created attachment 306803 [details] [review]
HACKING: remove set_row_header