JNI: Create jaw_table_set_row_header

Bug https://bugzilla.gnome.org/show_bug.cgi?id=751937